<resources>
    <string name="app_name">SImple Calculator</string>
    <string name="enter_the_1st_no">Enter the 1st no.</string>
    <string name="enter_the_2nd_no">Enter the 2nd no.</string>
    <string name="division">Division</string>
    <string name="multiplication">Multiplication</string>
    <string name="answer">Answer:</string>
    <string name="subtraction">Subtraction</string>
    <string name="addition">Addition</string>

</resources>
